Support Google Drive bundle links and download confirmation